--- a/Crane.html
+++ b/Crane.html
@@ -32,6 +32,6 @@
             The vain peacock realized how wrong he had been. He tried to apologize to the crane, but he was already flying towards the horizon. </dd><br>
 
     </dl>
-    <a href = "Index.html"> Back to Homepage </a>
+    <a href = "index.html"> Back to Homepage </a>
 </body>
 </html>
