--- a/Grapes.html
+++ b/Grapes.html
@@ -40,6 +40,6 @@
             The tits and blackbirds were unperturbed by his activities and nibbled one grape after another. With empty paws and a grumbling stomach, the proud fox turned away and continued to roam the countryside. </dd><br>
 
     </dl>
-    <a href = "Index.html"> Back to Homepage </a>
+    <a href = "index.html"> Back to Homepage </a>
 </body>
 </html>
