--- a/Hare.html
+++ b/Hare.html
@@ -46,6 +46,6 @@
             “Congratulations, dear turtle. You have won the race!” shouted the fox. All the animals of the forest congratulated the turtle and celebrated the incredible victory together with him.</dd><br>
 
     </dl>
-    <a href = "Index.html"> Back to Homepage </a>
+    <a href = "index.html"> Back to Homepage </a>
 </body>
 </html>
