--- a/Sheep.html
+++ b/Sheep.html
@@ -37,6 +37,6 @@
             “A wolf!” he shouted, startled. The wolf had been caught and his plan had failed. </dd><br>
 
     </dl>
-    <a href = "Index.html"> Back to Homepage </a>
+    <a href = "index.html"> Back to Homepage </a>
 </body>
 </html>
