--- a/Mouse.html
+++ b/Mouse.html
@@ -26,6 +26,6 @@
             A kindness is never wasted.</dd><br>
 
     </dl>
-    <a href = "Index.html"> Back to Homepage </a>
+    <a href = "index.html"> Back to Homepage </a>
 </body>
 </html>
